--- a/Product/index.html
+++ b/Product/index.html
@@ -39,7 +39,7 @@
 <div id="NavLink">
 <div class="NavBG">
 <!--Head Menu Start-->
-<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/news/'>酒后代驾</a></li> <li><a href='/BusinessScope/'>订车价格</a></li> <li><a href='/DisplayCase/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
+<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/news/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/DisplayCase/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
 <!--Head Menu End-->
 </div>
 <div class="clearfix"></div>
