--- a/ToBeExcepted.html
+++ b/ToBeExcepted.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<div><img src="¾´ÇëÆÚ´ý.jpg" width="100%" height="100%" /></div>
+<div><img src="/¾´ÇëÆÚ´ý.jpg" width="100%" height="100%" /></div>
 </body>
 <html>
