--- a/Recruit/index.html
+++ b/Recruit/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=7">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta http-equiv="content-language" content="zh-cn" />
-<title>Recruit_苏州力拓汽车服务有限公司</title>
+<title>订车价格_苏州力拓汽车服务有限公司</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="/css/juhaoyongfgstyle/inner.css" rel="stylesheet" type="text/css" />
@@ -39,7 +39,7 @@
 <div id="NavLink">
 <div class="NavBG">
 <!--Head Menu Start-->
-<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/news/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/DisplayCase/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
+<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
 <!--Head Menu End-->
 </div>
 <div class="clearfix"></div>
@@ -842,7 +842,7 @@
 <!--footer start-->
 <div id="footer">
 <div class="inner">
-<div class='BottomNav'><a href='/'>首 页</a> | <a href='/About/'>关于我们</a> | <a href='/Recruit/'>人才招聘</a> | <a href='/Sitemap/'>网站地图</a> | <a href='/ServiceCenter/Contactus/'>联系我们</a> | <a href='/Feedback/'>留言反馈</a></div><div class='HeightTab'></div><p>Copyright 2016-2017 
+<div class='BottomNav'><a href=''></a></div><div class='HeightTab'></div><p>Copyright 2016-2017 
 <a href='http://www.szltcar.com' target='_blank'>www.szltcar.com</a>
 苏州力拓汽车服务有限公司 版权所有 All Rights Reserved </p>
 <p>公司地址：苏州市阊门内下塘116号 联系电话：18351104777  QQ：1429089965</p>
