酒后代驾修改新增

--- a/DrinkDrive/index.html
+++ b/DrinkDrive/index.html
@@ -1,149 +1,143 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=7" />
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-    <meta http-equiv="content-language" content="zh-cn" />
-    <title>酒后代驾_苏州力拓汽车服务有限公司</title>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <link href="/css/juhaoyongfgstyle/inner.css" rel="stylesheet" type="text/css" />
-    <link href="/css/juhaoyongfgstyle/common.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="/css/juhaoyongfgstyle/functions.js"></script>
+<meta http-equiv="X-UA-Compatible" content="IE=7">
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="content-language" content="zh-cn" />
+<title>酒后代驾_苏州力拓汽车服务有限公司</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="/css/juhaoyongfgstyle/inner.css" rel="stylesheet" type="text/css" />
+<link href="/css/juhaoyongfgstyle/common.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/css/juhaoyongfgstyle/functions.js"></script>
 
 </head>
 
 <body>
-    <div id="wrapper">
+<div id="wrapper">
 
-        <!--head start-->
-        <div id="head">
+<!--head start-->
+<div id="head">
 
-            <!--top start -->
-            <div class="top">
+<!--top start -->
+<div class="top">
 
-                <div class="TopLogo">
-                    <div class="logo"><a href="/"><img src="/css/juhaoyongfgstyle/logo.jpg" alt="_苏州力拓汽车服务有限公司" /></a></div>
-                </div>
+<div class="TopLogo">
+<div class="logo"><a href="/"><img src="/css/juhaoyongfgstyle/logo.jpg" alt="_苏州力拓汽车服务有限公司"></a></div>
+</div>
 
-                <div class="TopInfo">
-                    <div class="clearfix"></div>
-                    <div class="tel"><p class="telW">热线电话</p><p class="telN">18351104777</p></div>
+<div class="TopInfo">
+<div class="clearfix"></div>
+<div class="tel"><p class="telW">热线电话</p><p class="telN">13358000050</p></div>
 
-                </div>
+</div>
 
-            </div>
-            <!--top end-->
-            <!--nav start-->
-            <div id="NavLink">
-                <div class="NavBG">
-                    <!--Head Menu Start-->
-                    <ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
-                    <!--Head Menu End-->
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <!--nav end-->
+</div>
+<!--top end-->
 
-        </div>
-        <!--head end-->
-        <!--body start-->
-        <div id="body">
-            <!--focus start-->
-            <div id="InnerBanner">
+<!--nav start-->
+<div id="NavLink">
+<div class="NavBG">
+<!--Head Menu Start-->
+<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
+<!--Head Menu End-->
+</div>
+<div class="clearfix"></div>
+</div>
+<!--nav end-->
 
-            </div>
-            <!--foncus end-->
-            <div class="HeightTab clearfix"></div>
-            <!--inner start -->
-            <div class="inner">
-                <!--left start-->
-                <div class="left">
+</div>
+<!--head end-->
+<!--body start-->
+<div id="body">
+<!--focus start-->
+<div id="InnerBanner">
 
-
-                    <div class="HeightTab clearfix"></div>
-                    <div class="Sbox">
-                        <div class="topic">联系我们</div>
-                        <div class="txt ColorLink">
-                            <p>地址：苏州市阊门内下塘116号</p>
-                            <p>手机：18351104777</p>
-                            <p>QQ：1429089965</p>
-                        </div>
-                    </div>
+</div>
+<!--foncus end-->
+<div class="HeightTab clearfix"></div>
+<!--inner start -->
+<div class="inner">
+<!--left start-->
+<div class="left">
 
 
-                </div>
-                <!--left end-->
-                <!--right start-->
-                <div class="right">
-                    <div class="topicright"><div class="TopicTitle">酒后代驾</div></div>
-                    <div class="HeightTab clearfix"></div>
-                    <!--main start-->
-                    <div class="main">
-
-                        <div class="RecruitList">
-                            <ul>
-                                <table width='100%' border='0' cellpadding='0' cellspacing='0'>
-
-                                    <td align='left' bgcolor='#FCFCFC'>
-                                        <p></p><p>
-                                            酒后代驾（苏州）收费标准：&nbsp;
-                                        </p>
-                                        <p>
-                                            时间段 起步价 07:00-21:59 39元(含10公里) 22:00-22:59 59元(含10公里) 23:00-23:59 79元(含10公里) 00:00-06:59 99元(含10公里)
-                                        </p>
-                                        <p>
-                                            &nbsp;1、不同时段的代驾起步费以实际出发时间为准。
-                                        </p>
-                                        <p>
-                                            &nbsp;2、代驾里程超过10公里后，每10公里加收20元，不足10公里按10公里计算。
-                                        </p>
-                                        <p>
-                                            &nbsp;3、关于等候时间：可免费等候客户30分钟，每超30分钟加收20元等候费（如司机提前到达，等候时间按客户预约时间为准，如未按预约时间到达，等候时间按司机到达时间为准，代驾途中因顾客停留需累计等候时间）。&nbsp;
-                                        </p>
-                                        <p>
-                                            &nbsp;4、单人醉酒且无人陪同的情况，不接受代驾服务。
-                                        </p>
-                                        <p>
-                                            &nbsp;5、其他特殊情况以公司通知为准。
-                                        </p></p>
-                                    </td></tr>
-                                </table>
-                                <br />
-                            </ul>
-                        </div>
-
-                    </div>
-                    <!--main end-->
-                </div>
-                <!--right end-->
-            </div>
-            <!--inner end-->
-        </div>
-        <!--body end-->
-        <div class="HeightTab clearfix"></div>
-        <!--footer start-->
-        <div id="footer">
-            <div class="inner">
-                <div class='BottomNav'><a href=''></a></div><div class='HeightTab'></div><p>
-                    Copyright 2016-2017
-                    <a href='http://www.szltcar.com' target='_blank'>www.szltcar.com</a>
-                    苏州力拓汽车服务有限公司 版权所有 All Rights Reserved
-                </p>
-                <p>公司地址：苏州市阊门内下塘116号 联系电话：18351104777  QQ：1429089965</p>
-                <DIV id=juhaoyong_xuanfukefu><DIV id=juhaoyong_xuanfukefuBut onmouseover='ShowJhyXuanfu()'><table class=juhaoyong_xuanfukefuBut_table border=0 cellspacing=0 cellpadding=0><tr><td> </td></tr></table></DIV><DIV id=juhaoyong_xuanfukefuContent><table width=143 border=0 cellspacing=0 cellpadding=0><tr><td class=juhaoyong_xuanfukefuContent01 valign=top> </td></tr><tr><td class=juhaoyong_xuanfukefuContent02 align=center>	<table border=0 cellspacing=0 cellpadding=0 align=center>    <tr><td class=jhykefu_box1>QQ客服</td></tr>    <tr><td class=jhykefu_box2><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1429089965&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:800010000:41 &r=0.16260569812690305" alt="点击这里给我发消息" title="点击这里给我发消息" /></a></td></tr>	</table></td></tr>	<tr><td class=juhaoyong_xuanfukefuContent03> </td></tr></table></DIV></DIV>
-            </div>
-        </div>
-        <!--footer end -->
+<div class="HeightTab clearfix"></div>
+<div class="Sbox">
+<div class="topic">联系我们</div>
+<div class="txt ColorLink">
+<p>地址：苏州市阊门内下塘116号</p>
+<p>手机：13358000050（骆经理）</p>
+<p>QQ：1429089965</p></div>
+</div>
 
 
-    </div>
-    <script type="text/javascript">
+</div>
+<!--left end-->
+<!--right start-->
+<div class="right">
+    <div class="topicright"><div class="TopicTitle">酒后代驾</div></div>
+<div class="HeightTab clearfix"></div>
+<!--main start-->
+<div class="main">
+
+<div class="RecruitList">
+<ul><table width='100%' border='0' cellpadding='0' cellspacing='0' ><td align='left' bgcolor='#FCFCFC'><p><p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	酒后代驾（苏州）收费标准：&nbsp;
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	时间段 起步价 07:00-21:59 39元(含10公里) 22:00-22:59 59元(含10公里) 23:00-23:59 79元(含10公里) 00:00-06:59 99元(含10公里)
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	&nbsp;1、不同时段的代驾起步费以实际出发时间为准。
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	&nbsp;2、代驾里程超过10公里后，每10公里加收20元，不足10公里按10公里计算。
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	&nbsp;3、关于等候时间：可免费等候客户30分钟，每超30分钟加收20元等候费（如司机提前到达，等候时间按客户预约时间为准，如未按预约时间到达，等候时间按司机到达时间为准，代驾途中因顾客停留需累计等候时间）。&nbsp;
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	&nbsp;4、单人醉酒且无人陪同的情况，不接受代驾服务。
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	&nbsp;5、其他特殊情况以公司通知为准。
+</p>
+<p style="font-family:新宋体, Arial, Helvetica, sans-serif;">
+	<br />
+</p></p></td></tr></table><br></ul>
+<div class='t_page ColorLink'>总数：1条&nbsp;&nbsp;当前页数：<span class='FontRed'>1</span>/1<a href=index.html>首页</a>&nbsp;&nbsp;上一页&nbsp;&nbsp;<a href=index.html>1</a> &nbsp;&nbsp;下一页&nbsp;&nbsp;<a href=index.html>尾页</a></div>
+</div>
+
+</div>
+<!--main end-->
+</div>
+<!--right end-->
+</div>
+<!--inner end-->
+</div>
+<!--body end-->
+<div class="HeightTab clearfix"></div>
+<!--footer start-->
+<div id="footer">
+<div class="inner">
+<div class='BottomNav'><a href=''></a></div><div class='HeightTab'></div><p>Copyright 2016-2017 
+<a href='http://www.szltcar.com' target='_blank'>www.szltcar.com</a>
+苏州力拓汽车服务有限公司 版权所有 All Rights Reserved </p>
+<p>公司地址：苏州市阊门内下塘116号 联系电话：13358000050  QQ：1429089965</p>
+<DIV id=juhaoyong_xuanfukefu><DIV id=juhaoyong_xuanfukefuBut onmouseover='ShowJhyXuanfu()'><table class=juhaoyong_xuanfukefuBut_table border=0 cellspacing=0 cellpadding=0><tr><td> </td></tr></table></DIV><DIV id=juhaoyong_xuanfukefuContent><table width=143 border=0 cellspacing=0 cellpadding=0><tr><td class=juhaoyong_xuanfukefuContent01 valign=top> </td></tr><tr><td class=juhaoyong_xuanfukefuContent02 align=center>	<table border=0 cellspacing=0 cellpadding=0 align=center>    <tr><td class=jhykefu_box1>QQ客服</td></tr>    <tr><td class=jhykefu_box2><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1429089965&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:800010000:41 &r=0.16260569812690305" alt="点击这里给我发消息" title="点击这里给我发消息"></a></td></tr>	</table></td></tr>	<tr><td class=juhaoyong_xuanfukefuContent03> </td></tr></table></DIV></DIV>
+</div>
+</div>
+<!--footer end -->
+
+
+</div>
+<script type="text/javascript">
 window.onerror=function(){return true;}
-    </script>
+</script>
 
-    <script type="text/javascript" src="/juhaoyong-kfimgs/jquery.js"></script>
-    <script type="text/javascript" src="/juhaoyong-kfimgs/kf.js"></script>
+<script type="text/javascript" src="/juhaoyong-kfimgs/jquery.js"></script>
+<script type="text/javascript" src="/juhaoyong-kfimgs/kf.js"></script>
 </body>
 </html>
 
