--- a/About/Culture/index.html
+++ b/About/Culture/index.html
@@ -29,7 +29,7 @@
 <div class="TopInfo">
 <div class="link"><a href="/">首 页</a> | <a href="/Sitemap">网站导航</a> | <a href="/Feedback">留言反馈</a></div>
 <div class="clearfix"></div>
-<div class="tel"><p class="telW">热线电话</p><p class="telN">18351104777</p></div>
+<div class="tel"><p class="telW">热线电话</p><p class="telN">13358000050</p></div>
 <div class="juhaoyongTopSearchClass">
 	<form method="get" action="/Search/index.asp">
 	<span class="SearchBar">
@@ -72,7 +72,7 @@
 <div class="Sbox">
 <div class="topic">最新资讯</div>
 <div class="list">
-<dl><dd><a href='/html/8502464616.html' target='_blank' title='网站建站流程开始先为网站设立一个目标'>网站建站流程开始先为网站设立</a></dd><dd><a href='/html/894203584.html' target='_blank' title='什么是动态网页，动态网页的内容随着用户的输入和互动而有所不同'>什么是动态网页，动态网页的内</a></dd><dd><a href='/html/3067255738.html' target='_blank' title='什么是静态网页，静态网页多数为单一的超文件标示语言档案'>什么是静态网页，静态网页多数</a></dd><dd><a href='/html/8316055647.html' target='_blank' title='公司企业网站建设包括哪些工作'>公司企业网站建设包括哪些工作</a></dd><dd><a href='/html/3206515534.html' target='_blank' title='什么是网站建设，通过互联网传输，最终以图形用户界面的形式被用户所浏览'>什么是网站建设，通过互联网传</a></dd><dd><a href='/html/8542965340.html' target='_blank' title='网站建设流程：申请域名、申请空间、定位网站、风格设计等'>网站建设流程：申请域名、申请</a></dd><dd><a href='/html/0518764326.html' target='_blank' title='常见问题二，后台可编辑图文内容'>常见问题二，后台可编辑图文内</a></dd><dd><a href='/html/6592074227.html' target='_blank' title='常见问题一，后台可编辑图文内容'>常见问题一，后台可编辑图文内</a></dd></dl>
+<dl><dd><a href='/html/2857611716.html' target='_blank' title='文档（1）下载'>文档（1）下载</a></dd></dl>
 </div>
 
 </div>
@@ -81,7 +81,7 @@
 <div class="topic">联系我们</div>
 <div class="txt ColorLink">
 <p>地址：苏州市阊门内下塘116号</p>
-<p>手机：18351104777</p>
+<p>手机：13358000050（骆经理）</p>
 <p>QQ：1429089965</p></div>
 </div>
 
@@ -173,7 +173,7 @@ onfocus="if(this.value=='请输入关键词') this.value='';" value="请输入关键词" /><
 <div class='BottomNav'><a href=''></a></div><div class='HeightTab'></div><p>Copyright 2016-2017 
 <a href='http://www.szltcar.com' target='_blank'>www.szltcar.com</a>
 苏州力拓汽车服务有限公司 版权所有 All Rights Reserved </p>
-<p>公司地址：苏州市阊门内下塘116号 联系电话：18351104777  QQ：1429089965</p>
+<p>公司地址：苏州市阊门内下塘116号 联系电话：13358000050  QQ：1429089965</p>
 <DIV id=juhaoyong_xuanfukefu><DIV id=juhaoyong_xuanfukefuBut onmouseover='ShowJhyXuanfu()'><table class=juhaoyong_xuanfukefuBut_table border=0 cellspacing=0 cellpadding=0><tr><td> </td></tr></table></DIV><DIV id=juhaoyong_xuanfukefuContent><table width=143 border=0 cellspacing=0 cellpadding=0><tr><td class=juhaoyong_xuanfukefuContent01 valign=top> </td></tr><tr><td class=juhaoyong_xuanfukefuContent02 align=center>	<table border=0 cellspacing=0 cellpadding=0 align=center>    <tr><td class=jhykefu_box1>QQ客服</td></tr>    <tr><td class=jhykefu_box2><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1429089965&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:800010000:41 &r=0.16260569812690305" alt="点击这里给我发消息" title="点击这里给我发消息"></a></td></tr>	</table></td></tr>	<tr><td class=juhaoyong_xuanfukefuContent03> </td></tr></table></DIV></DIV>
 </div>
 </div>
