--- a/About/index.html
+++ b/About/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=7">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta http-equiv="content-language" content="zh-cn" />
-<title>关于我们_苏州力拓汽车服务有限公司</title>
+<title>公司致力于某某行业的发展_苏州力拓汽车服务有限公司</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="/css/juhaoyongfgstyle/inner.css" rel="stylesheet" type="text/css" />
@@ -27,9 +27,17 @@
 </div>
 
 <div class="TopInfo">
+<div class="link"><a href="/">首 页</a> | <a href="/Sitemap">网站导航</a> | <a href="/Feedback">留言反馈</a></div>
 <div class="clearfix"></div>
-<div class="tel"><p class="telW">热线电话</p><p class="telN">18351104777</p></div>
-
+<div class="tel"><p class="telW">热线电话</p><p class="telN">13358000050</p></div>
+<div class="juhaoyongTopSearchClass">
+	<form method="get" action="/Search/index.asp">
+	<span class="SearchBar">
+	<input type="text" name="q" id="search-text" size="15" onBlur="if(this.value=='') this.value='请输入关键词';" onfocus="if(this.value=='请输入关键词') this.value='';" value="请输入关键词" />
+	<input type="submit" id="search-submit" value="搜索" />
+	</span>
+	</form>
+</div>
 </div>
 
 </div>
@@ -60,12 +68,32 @@
 <div class="inner">
 <!--left start-->
 <div class="left">
+<div class='Sbox'><div class='topic'><a href=/About>关于我们</a></div><div class='blank'><ul><li><A href='/About/Group'>Group</A></li> <li><A href='/About/Culture'>Culture</A></li> <li><A href='/About/Enviro'>Enviro</A></li> <li><A href='/About/Business'>Business</A></li> </ul></div></div><div class='HeightTab clearfix'></div>
+<div class="Sbox">
+<div class="topic">最新资讯</div>
+<div class="list">
+<dl><dd><a href='/html/2857611716.html' target='_blank' title='文档（1）下载'>文档（1）下载</a></dd></dl>
+</div>
+
+</div>
+<div class="HeightTab clearfix"></div>
 <div class="Sbox">
 <div class="topic">联系我们</div>
 <div class="txt ColorLink">
 <p>地址：苏州市阊门内下塘116号</p>
-<p>手机：18351104777</p>
+<p>手机：13358000050（骆经理）</p>
 <p>QQ：1429089965</p></div>
+</div>
+
+<div class="HeightTab clearfix"></div>
+<div class="Sbox">
+<div class="topic">搜索</div>
+<div class="SearchBar">
+<form method="get" action="/Search/index.asp">
+				<input type="text" name="q" id="search-text" size="15" onBlur="if(this.value=='') this.value='请输入关键词';" 
+onfocus="if(this.value=='请输入关键词') this.value='';" value="请输入关键词" /><input type="submit" id="search-submit" value="搜索" />
+			</form>
+</div>
 </div>
 </div>
 <!--left end-->
@@ -80,7 +108,19 @@
 <div class="content">
 <div class="maincontent clearfix">
 <p>
-    苏州力拓汽车租赁有限公司是苏州境内唯一专业从事高端商务租车服务的公司。主要接待旅游用车，机场接送，商务用车，婚嫁礼仪，会展商务，礼宾用车等等。 公司承诺将以最低的价格和最优质的服务为你的出行护航。 本公司主要经营别克商务，奔驰威霆商务，GMC房车，丰田考斯特以及19座以下电动汽车等等商务车型。我们秉承诚信经营的原则希望与各企事业单位建立长久互信互惠的合作关系!我们期待你的光临！ 欢迎来电咨询！
+	　　某某有限公司致力于XX业的发展，专业从事集中润滑系统的研究、开发、制造及销售，凭借公司强大的技术力量和经济实力，不断开发出具有国际先进技术水平的新产品。公司产品广泛适用于数控机械、加工中心、生产线、机床、锻压、纺织、塑料、橡胶、矿山、冶金、建筑、印刷、化工、制药、铸造、食品等各行业的机械设备及大型车辆底盘的集中润滑系统。
+</p>
+<p>
+	　　公司总部设在xxx，在全国各大城市设有分支机构，服务网络遍及全国。公司内部实行网络化管理，依托先进的计算机辅助设计系统和计算机管理系统，实现规范化运作，在最短的时间内为用户提供高品质的产品。
+</p>
+<p>
+	　　公司本着技术领先、质量第一、客户至上的原则为广大用户提供满意的服务。
+</p>
+<p>
+	　　目前公司为国内、外超过2万家的企业提供了网站建设、域名、邮件服务、虚拟主机、网站托管服务，同时为近千家的企业设计开发了基于互联网的各类商务应用和管理软件，是国内具影响力的互联网应用服务商之一。公司将坚持客户导向、应用为本的策略，继续专注于在信息技术领域开拓发展成为企业、政府、家庭信息化的推动者和服务者。正道将秉承"和谐、参与、激情"的文化，与客户和合作伙伴齐心协力一起成长，共同发展。
+</p>
+<p>
+	　　公司自2000年创立以来，积极进取，不断创新，凭借良好的企业信誉，独特的经营风格及较强的市场开拓能力，取得了一个又一个的骄人业绩。数年来，xx快速稳健的发展，离不开业内极其优秀的合作伙伴。
 </p>
 <p>
 	&nbsp;
@@ -112,7 +152,7 @@
 <div class='BottomNav'><a href=''></a></div><div class='HeightTab'></div><p>Copyright 2016-2017 
 <a href='http://www.szltcar.com' target='_blank'>www.szltcar.com</a>
 苏州力拓汽车服务有限公司 版权所有 All Rights Reserved </p>
-<p>公司地址：苏州市阊门内下塘116号 联系电话：18351104777  QQ：1429089965</p>
+<p>公司地址：苏州市阊门内下塘116号 联系电话：13358000050  QQ：1429089965</p>
 <DIV id=juhaoyong_xuanfukefu><DIV id=juhaoyong_xuanfukefuBut onmouseover='ShowJhyXuanfu()'><table class=juhaoyong_xuanfukefuBut_table border=0 cellspacing=0 cellpadding=0><tr><td> </td></tr></table></DIV><DIV id=juhaoyong_xuanfukefuContent><table width=143 border=0 cellspacing=0 cellpadding=0><tr><td class=juhaoyong_xuanfukefuContent01 valign=top> </td></tr><tr><td class=juhaoyong_xuanfukefuContent02 align=center>	<table border=0 cellspacing=0 cellpadding=0 align=center>    <tr><td class=jhykefu_box1>QQ客服</td></tr>    <tr><td class=jhykefu_box2><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1429089965&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:800010000:41 &r=0.16260569812690305" alt="点击这里给我发消息" title="点击这里给我发消息"></a></td></tr>	</table></td></tr>	<tr><td class=juhaoyong_xuanfukefuContent03> </td></tr></table></DIV></DIV>
 </div>
 </div>
