生成订车流程等页面

--- a/SiteMap/index.html
+++ b/SiteMap/index.html
@@ -46,7 +46,7 @@
 <div id="NavLink">
 <div class="NavBG">
 <!--Head Menu Start-->
-<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
+<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/Price/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
 <!--Head Menu End-->
 </div>
 <div class="clearfix"></div>
@@ -70,7 +70,7 @@
 <div class="Sbox">
 <div class="topic">最新资讯</div>
 <div class="list">
-<dl><dd><a href='/html/2857611716.html' target='_blank' title='文档（1）下载'>文档（1）下载</a></dd></dl>
+暂无信息。
 </div>
 
 </div>
@@ -106,7 +106,7 @@ onfocus="if(this.value=='请输入关键词') this.value='';" value="请输入关键词" /><
 <div class="SiteMap">
 <ul>
 <li><a href="/">网站首页</a></li>
-<li><A href='/About'>关于我们</A> <ul><li><a href='/About/Group/' >Group</a></li> <li><a href='/About/Culture/' >Culture</a></li> <li><a href='/About/Enviro/' >Enviro</a></li> <li><a href='/About/Business/' >Business</a></li> </ul></li> <li><A href='/Product'>公司车辆</A> </li> <li><A href='/DrinkDrive'>酒后代驾</A> </li> <li><A href='/ServiceCenter'>ServiceCenter</A> <ul><li><a href='/ServiceCenter/FAQ/' >FAQ</a></li> <li><a href='/ServiceCenter/Download/' >Download</a></li> <li><a href='/ServiceCenter/Contactus/' >关于我们</a></li> </ul></li> <li><A href='/Recruit'>订车价格</A> <ul><li><a href='/Recruit/Jobs/' >Jobs</a></li> </ul></li> 
+<li><A href='/About'>关于我们</A> <ul><li><a href='/About/Group/' >Group</a></li> <li><a href='/About/Culture/' >Culture</a></li> <li><a href='/About/Enviro/' >Enviro</a></li> <li><a href='/About/Business/' >Business</a></li> </ul></li> <li><A href='/Product'>公司车辆</A> </li> <li><A href='/DrinkDrive'>酒后代驾</A> </li> <li><A href='/RentalProcess'>租车流程</A> <ul><li><a href='/RentalProcess/FAQ/' >FAQ</a></li> <li><a href='/RentalProcess/Download/' >Download</a></li> <li><a href='/RentalProcess/Contactus/' >关于我们</a></li> </ul></li> <li><A href='/Price'>订车价格</A> <ul><li><a href='/Price/Jobs/' >Jobs</a></li> </ul></li> 
 </ul>
 </div>
 <!--SiteMap end-->
