--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="NavLink">
 <div class="NavBG">
 <!--Head Menu Start-->
-<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
+<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/Price/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
 <!--Head Menu End-->
 </div>
 <div class="clearfix"></div>
@@ -68,10 +68,10 @@
         <!--联系我们right2 start-->
         <div class="left">
             <div class="topic">
-                <div class="TopicTitle"><a href='/ServiceCenter/Contactus'>关于我们</a></div>
-                <div class="TopicMore"> <!--<a href='/ServiceCenter/Contactus'><img src="images/more.png" /></a>--></div>
+                <div class="TopicTitle"><a href='/RentalProcess/Contactus'>关于我们</a></div>
+                <div class="TopicMore"> <!--<a href='/RentalProcess/Contactus'><img src="images/more.png" /></a>--></div>
             </div>
-            <div class='img'><a href='/ServiceCenter/Contactus' target='_blank'><img src='/css/juhaoyongfgstyle/contactus.jpg' width='242' height='100' alt='关于我们' /></a></div><div class="txt ColorLink">
+            <div class='img'><a href='/RentalProcess/Contactus' target='_blank'><img src='/css/juhaoyongfgstyle/contactus.jpg' width='242' height='100' alt='关于我们' /></a></div><div class="txt ColorLink">
                 <p>地址：苏州市阊门内下塘116号</p>
 <p>手机：13358000050（骆经理）</p>
 <p>QQ：1429089965</p>
@@ -86,7 +86,7 @@
         <div class="right">
             <div class="topic">
                 <div class="TopicTitle">订车价格</div>
-                <div class="TopicMore"> <!--<a href='/ServiceCenter'><img src="images/more.png" /></a>--></div>
+                <div class="TopicMore"> <!--<a href='/'><img src="images/more.png" /></a>--></div>
             </div>
             <div class='clearfix'></div>
             <table class="MBlockTable" width="100%" border="0" cellspacing="0" cellpadding="0">
