--- a/RentalProcess/index.html
+++ b/RentalProcess/index.html
@@ -1,128 +1,132 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=7" />
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-    <meta http-equiv="content-language" content="zh-cn" />
-    <title>租车流程_苏州力拓汽车服务有限公司</title>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <link href="/css/juhaoyongfgstyle/inner.css" rel="stylesheet" type="text/css" />
-    <link href="/css/juhaoyongfgstyle/common.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="/css/juhaoyongfgstyle/functions.js"></script>
+<meta http-equiv="X-UA-Compatible" content="IE=7">
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="content-language" content="zh-cn" />
+<title>租车流程_苏州力拓汽车服务有限公司</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="/css/juhaoyongfgstyle/inner.css" rel="stylesheet" type="text/css" />
+<link href="/css/juhaoyongfgstyle/common.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/css/juhaoyongfgstyle/functions.js"></script>
 
 </head>
 
 <body>
-    <div id="wrapper">
+<div id="wrapper">
 
-        <!--head start-->
-        <div id="head">
+<!--head start-->
+<div id="head">
 
-            <!--top start -->
-            <div class="top">
+<!--top start -->
+<div class="top">
 
-                <div class="TopLogo">
-                    <div class="logo"><a href="/"><img src="/css/juhaoyongfgstyle/logo.jpg" alt="_苏州力拓汽车服务有限公司" /></a></div>
-                </div>
+<div class="TopLogo">
+<div class="logo"><a href="/"><img src="/css/juhaoyongfgstyle/logo.jpg" alt="_苏州力拓汽车服务有限公司"></a></div>
+</div>
 
-                <div class="TopInfo">
-                    <div class="clearfix"></div>
-                    <div class="tel"><p class="telW">热线电话</p><p class="telN">18351104777</p></div>
+<div class="TopInfo">
+<div class="clearfix"></div>
+<div class="tel"><p class="telW">热线电话</p><p class="telN">13358000050</p></div>
 
-                </div>
+</div>
 
-            </div>
-            <!--top end-->
-            <!--nav start-->
-            <div id="NavLink">
-                <div class="NavBG">
-                    <!--Head Menu Start-->
-                    <ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/recruit/jobs/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
-                    <!--Head Menu End-->
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <!--nav end-->
+</div>
+<!--top end-->
 
-        </div>
-        <!--head end-->
-        <!--body start-->
-        <div id="body">
-            <!--focus start-->
-            <div id="InnerBanner">
+<!--nav start-->
+<div id="NavLink">
+<div class="NavBG">
+<!--Head Menu Start-->
+<ul id='sddm'><li><a href='/'>首 页</a></li> <li><a href='/Product/'>车型展示</a></li> <li><a href='/DrinkDrive/'>酒后代驾</a></li> <li><a href='/Price/'>订车价格</a></li> <li><a href='/RentalProcess/'>租车流程</a></li> <li><a href='/About/'>关于我们</a></li> </ul>
+<!--Head Menu End-->
+</div>
+<div class="clearfix"></div>
+</div>
+<!--nav end-->
 
-            </div>
-            <!--foncus end-->
-            <div class="HeightTab clearfix"></div>
-            <!--inner start -->
-            <div class="inner">
-                <!--left start-->
-                <div class="left">
+</div>
+<!--head end-->
+<!--body start-->
+<div id="body">
+<!--focus start-->
+<div id="InnerBanner">
 
-
-                    <div class="HeightTab clearfix"></div>
-                    <div class="Sbox">
-                        <div class="topic">联系我们</div>
-                        <div class="txt ColorLink">
-                            <p>地址：苏州市阊门内下塘116号</p>
-                            <p>手机：18351104777</p>
-                            <p>QQ：1429089965</p>
-                        </div>
-                    </div>
+</div>
+<!--foncus end-->
+<div class="HeightTab clearfix"></div>
+<!--inner start -->
+<div class="inner">
+<!--left start-->
+<div class="left">
 
 
-                </div>
-                <!--left end-->
-                <!--right start-->
-                <div class="right">
-                    <div class="topicright"><div class="TopicTitle">租车流程</div></div>
-                    <div class="HeightTab clearfix"></div>
-                    <!--main start-->
-                    <div class="main">
-
-                        <div class="RecruitList">
-                            <ul>
-                                <table width='100%' border='0' cellpadding='0' cellspacing='0'>
-                                    <td align='left' bgcolor='#FCFCFC'>
-                                        <p>
-                                            <div>
-                                                &nbsp;&nbsp;1、预订或拨打电话预订车辆，需提供车型，提车时间、提车门店；并且需要提供个人的一些相关信息等。<br />
-                                                &nbsp;&nbsp;2、到提车时间去所预订的门店提车，业务人员会帮您办理租车手续。<br />
-                                                &nbsp;&nbsp;3、首先需出示租车所需证件、包括身份证原件和驾驶证原件，之后业务员会给您一份“汽车租赁登记表”与“租赁合同”两份都需要承租方签字，接着再进行费用等事宜的办理。<br />
-                                                &nbsp;&nbsp;4、所有程序办理完成后您就可以提车，您需要安全驾驶直至合同结束。&nbsp;
-                                            </div>
-                                        </p>
-                                    </td></tr>
-                                </table>
-                                <br />
-                            </ul>
-                        </div>
-
-                    </div>
-                    <!--main end-->
-                </div>
-                <!--right end-->
-            </div>
-            <!--inner end-->
-        </div>
-        <!--body end-->
-        <div class="HeightTab clearfix"></div>
-        <!--footer start-->
-        <div id="footer">
-            <div class="inner">
-                <div class='BottomNav'><a href='/'> </a></div>
-            </div>
-        </div>
-        <!--footer end -->
+<div class="HeightTab clearfix"></div>
+<div class="Sbox">
+<div class="topic">联系我们</div>
+<div class="txt ColorLink">
+<p>地址：苏州市阊门内下塘116号</p>
+<p>手机：13358000050（骆经理）</p>
+<p>QQ：1429089965</p></div>
+</div>
 
 
-    </div>
-    <script type="text/javascript">
-        window.onerror = function () { return true; }
-    </script>
+</div>
+<!--left end-->
+<!--right start-->
+<div class="right">
+    <div class="topicright"><div class="TopicTitle">租车流程</div></div>
+<div class="HeightTab clearfix"></div>
+<!--main start-->
+<div class="main">
 
-    <script type="text/javascript" src="/juhaoyong-kfimgs/jquery.js"></script>
-    <script type="text/javascript" src="/juhaoyong-kfimgs/kf.js"></script>
+<div class="RecruitList">
+<ul><table width='100%' border='0' cellpadding='0' cellspacing='0' ><td align='left' bgcolor='#FCFCFC'><p><div style="background-color:#FFFFFF;font-family:微软雅黑;font-size:14px;">
+	<span style="background-color:#FCFCFC;font-family:新宋体, Arial, Helvetica, sans-serif;font-size:12px;">&nbsp; 1、预订或拨打电话预订车辆，需提供车型，提车时间、提车门店；并且需要提供个人的一些相关信息等。 </span> 
+</div>
+<div style="background-color:#FFFFFF;font-family:微软雅黑;font-size:14px;">
+	<span style="background-color:#FCFCFC;font-family:新宋体, Arial, Helvetica, sans-serif;font-size:12px;">&nbsp; 2、到提车时间去所预订的门店提车，业务人员会帮您办理租车手续。 </span> 
+</div>
+<div style="background-color:#FFFFFF;font-family:微软雅黑;font-size:14px;">
+	<span style="background-color:#FCFCFC;font-family:新宋体, Arial, Helvetica, sans-serif;font-size:12px;">&nbsp; 3、首先需出示租车所需证件、包括身份证原件和驾驶证原件，之后业务员会给您一份“汽车租赁登记表”与“租赁合同”两份都需要承租方签字，接着再进行费用等事宜的办理。 </span> 
+</div>
+<div style="background-color:#FFFFFF;font-family:微软雅黑;font-size:14px;">
+	<span style="background-color:#FCFCFC;font-family:新宋体, Arial, Helvetica, sans-serif;font-size:12px;">&nbsp; 4、所有程序办理完成后您就可以提车，您需要安全驾驶直至合同结束。</span> 
+</div></p></td></tr></table><br></ul>
+<div class='t_page ColorLink'>总数：1条&nbsp;&nbsp;当前页数：<span class='FontRed'>1</span>/1<a href=index.html>首页</a>&nbsp;&nbsp;上一页&nbsp;&nbsp;<a href=index.html>1</a> &nbsp;&nbsp;下一页&nbsp;&nbsp;<a href=index.html>尾页</a></div>
+</div>
+
+</div>
+<!--main end-->
+</div>
+<!--right end-->
+</div>
+<!--inner end-->
+</div>
+<!--body end-->
+<div class="HeightTab clearfix"></div>
+<!--footer start-->
+<div id="footer">
+<div class="inner">
+<div class='BottomNav'><a href=''></a></div><div class='HeightTab'></div><p>Copyright 2016-2017 
+<a href='http://www.szltcar.com' target='_blank'>www.szltcar.com</a>
+苏州力拓汽车服务有限公司 版权所有 All Rights Reserved </p>
+<p>公司地址：苏州市阊门内下塘116号 联系电话：13358000050  QQ：1429089965</p>
+<DIV id=juhaoyong_xuanfukefu><DIV id=juhaoyong_xuanfukefuBut onmouseover='ShowJhyXuanfu()'><table class=juhaoyong_xuanfukefuBut_table border=0 cellspacing=0 cellpadding=0><tr><td> </td></tr></table></DIV><DIV id=juhaoyong_xuanfukefuContent><table width=143 border=0 cellspacing=0 cellpadding=0><tr><td class=juhaoyong_xuanfukefuContent01 valign=top> </td></tr><tr><td class=juhaoyong_xuanfukefuContent02 align=center>	<table border=0 cellspacing=0 cellpadding=0 align=center>    <tr><td class=jhykefu_box1>QQ客服</td></tr>    <tr><td class=jhykefu_box2><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1429089965&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:800010000:41 &r=0.16260569812690305" alt="点击这里给我发消息" title="点击这里给我发消息"></a></td></tr>	</table></td></tr>	<tr><td class=juhaoyong_xuanfukefuContent03> </td></tr></table></DIV></DIV>
+</div>
+</div>
+<!--footer end -->
+
+
+</div>
+<script type="text/javascript">
+window.onerror=function(){return true;}
+</script>
+
+<script type="text/javascript" src="/juhaoyong-kfimgs/jquery.js"></script>
+<script type="text/javascript" src="/juhaoyong-kfimgs/kf.js"></script>
 </body>
 </html>
+
+
