首页自动读取价格列表

--- a/RentalProcess/index.html
+++ b/RentalProcess/index.html
@@ -93,7 +93,8 @@
 </div>
 <div style="background-color:#FFFFFF;font-family:微软雅黑;font-size:14px;">
 	<span style="background-color:#FCFCFC;font-family:新宋体, Arial, Helvetica, sans-serif;font-size:12px;">&nbsp; 4、所有程序办理完成后您就可以提车，您需要安全驾驶直至合同结束。</span> 
-</div></p></td></tr></table><br></ul>
+</div>
+</p></td></tr></table><br></ul>
 <div class='t_page ColorLink'>总数：1条&nbsp;&nbsp;当前页数：<span class='FontRed'>1</span>/1<a href=index.html>首页</a>&nbsp;&nbsp;上一页&nbsp;&nbsp;<a href=index.html>1</a> &nbsp;&nbsp;下一页&nbsp;&nbsp;<a href=index.html>尾页</a></div>
 </div>
 
